--- a/prometheus/prometheus-server-pv.yml
+++ b/prometheus/prometheus-server-pv.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: prometheus-pv
+  name: prometheus-server-pv
   namespace: prometheus
   labels:
      app: prometheus
@@ -13,4 +13,4 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: "/media/k8s_pv/prometheus"
+    path: "/media/k8s_pv/prometheus-server"
