--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -11,7 +11,15 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
     restart: on-failure
-
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: '1G'
+        reservations:
+          cpus: '0.4'
+          memory: '256M'
+          
 volumes:
   jenkins_home:
     external: true
