jenkins - added timezone

--- a/jenkins/docker/docker-compose.yml
+++ b/jenkins/docker/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
     restart: on-failure
+    environment:
+      - TZ=Europe/Kyiv
     deploy:
       resources:
         limits:
