--- a/jenkins/k8s/build
+++ b/jenkins/k8s/build
@@ -1,5 +1,9 @@
 #!/bin/bash
 
+set -e errexit
+set -o pipefail
+set -o nounset
+
 groupname="docker"
 gid=$(getent group "$groupname" | awk -F: '{print $3}')
 
