--- a/dozzle/docker-compose.yml
+++ b/dozzle/docker-compose.yml
@@ -1,17 +1,17 @@
 services:
   dozzle:
-    image: amir20/dozzle:latest
+    image: amir20/dozzle:pr-3168
     container_name: dozzle
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 32560:8080
-    restart: on-failure
+    restart: unless-stopped
     deploy:
       resources:
         limits:
-          cpus: '1.0'
+          cpus: '0.5'
           memory: '384M'
         reservations:
-          cpus: '0.5'
+          cpus: '0.2'
           memory: '256M'
