--- a/jenkins/docker/docker-compose.yml
+++ b/jenkins/docker/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - 50000:50000
     volumes:
       - jenkins_home:/var/jenkins_home
+    restart: always
     environment:
       - TZ=Europe/Kyiv
     deploy:
