--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - portainer_data:/data
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
+    restart: always
     deploy:
       resources:
         limits:
