jenkins - Updated version to 2.472. Removed sudo privileges for jenkins user

--- a/jenkins/k8s/Dockerfile
+++ b/jenkins/k8s/Dockerfile
@@ -1,15 +1,14 @@
-FROM jenkins/jenkins:2.468-jdk21
+FROM jenkins/jenkins:2.472-jdk21
 
 ARG DOCKER_GID
 
 USER root
 
-RUN apt update && apt install -y --no-install-recommends sudo nano iputils-ping curl \
+RUN apt update && apt install -y --no-install-recommends nano iputils-ping curl \
     && curl -fsSL https://get.docker.com | sh \
     && groupmod -g ${DOCKER_GID} docker \
     && usermod -aG docker jenkins \
     && rm -rf /var/lib/apt/lists/* && apt-get clean \
-    && echo "jenkins ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers \
     && curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
     && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl \
     && rm kubectl
