--- a/jenkins/docker/Dockerfile
+++ b/jenkins/docker/Dockerfile
@@ -1,9 +1,8 @@
-FROM jenkins/jenkins:2.467-jdk21
+FROM jenkins/jenkins:2.472-jdk21
 
 USER root
 
-RUN apt update && apt install -y --no-install-recommends sudo nano iputils-ping \
-    && rm -rf /var/lib/apt/lists/* && apt-get clean \
-    && echo "jenkins ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers 
+RUN apt update && apt install -y --no-install-recommends nano iputils-ping \
+    && rm -rf /var/lib/apt/lists/* && apt-get clean
 
 USER jenkins
