--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -1,9 +1,15 @@
 services:
   portainer:
-    image: portainer/portainer-ce:2.20.3-alpine
+    build: 
+      context: .
+      dockerfile: Dockerfile
+      args:
+      - USER_NAME=$USER_NAME
+      - USER_ID=$USER_ID
+      - DOCKER_GID=$DOCKER_GID
     container_name: portainer
     ports:
-      - 34560:9443
+      - ${PORT}:9443
     volumes:
       - portainer_data:/data
       - /var/run/docker.sock:/var/run/docker.sock
@@ -11,10 +17,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: '256M'
-        reservations:
-          cpus: '0.2'
+          cpus: '0.3'
           memory: '128M'
           
 volumes:
