--- a/jenkins/docker/docker-compose.yml
+++ b/jenkins/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: jenkins
     image: jenkins
     ports:
-      - 31940:8080
+      - ${PORT}:8080
       - 50000:50000
     volumes:
       - jenkins_home:/var/jenkins_home
