--- a/pihole/docker-compose.yaml
+++ b/pihole/docker-compose.yaml
@@ -1,27 +1,24 @@
 services:
   pihole:
-    container_name: pihole
     image: pihole/pihole:2024.07.0
+    container_name: pihole
     environment:
       - TZ=Europe/Kyiv
     restart: unless-stopped
     ports:
       - 53:53/tcp
       - 53:53/udp
-      - 67:67/udp
-      - 26541:80/tcp
-    cap_add:
-      - NET_ADMIN
+      - ${PORT}:80/tcp
     volumes:
       - pihole-etc:/etc/pihole
       - pihole-dnsmasq:/etc/dnsmasq.d
     deploy:
       resources:
         limits:
-          cpus: '1.0'
-          memory: '512M'
+          cpus: '0.4'
+          memory: '384M'
         reservations:
-          cpus: '0.5'
+          cpus: '0.2'
           memory: '256M'
 
 volumes:
