--- a/jenkins/docker/docker-compose.yml
+++ b/jenkins/docker/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+      args:
+        - GID_DOCKER=$GID_DOCKER
     container_name: jenkins
     image: jenkins
     ports:
@@ -10,6 +12,7 @@ services:
       - 50000:50000
     volumes:
       - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: always
     environment:
       - TZ=Europe/Kyiv
