--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   mysql:
     image: mysql:8.0.39-bookworm
     container_name: mysql_db
+    networks:
+    - phpmna-network
     ports:
       - 3306:3306
     environment:
@@ -24,11 +26,10 @@ services:
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
-    restart: always
     ports:
       - ${PORT_PHPMA}:80
-    depends_on:
-      - mysql
+    networks:
+      - phpmna-network
     deploy:
       resources:
         limits:
@@ -41,3 +42,7 @@ services:
 volumes:
   mysql_data:
     external: true
+
+networks:
+  phpmna-network:
+    driver: bridge
